--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <h1><p>Comparte tus viajes</p></h1>
       <h2 class="pequenio">Nueva York - Central Park</h2>
 
-      <div class="inicio">
+      <nav class="inicio">
         <a href="#">Descripción</a>
         <a href="#">Fotos relacionadas</a>
         <a href="#">Comentarios</a>
-      </div>
+      </nav>
     </header>
 
     <main>
@@ -73,14 +73,12 @@
     </main>
 
     <footer>
-      <section>
+      <p>
         <a href="#">Inicio</a>
         |
         <a href="#">Navegación</a>
         |
         <a href="#">Buscar</a>
-      </section>
-
       <p><i>Copyright © <time>2021</time> Comparte Tus Viajes</i></p>
     </footer>
   </body>
